Status/2025Q1/cfc.adoc: Fix lists indentation
Reported by:	ykla <yklaxds@gmail.com>
Pull Request:	https://github.com/freebsd/freebsd-doc/pull/480

--- a/website/content/en/status/report-2025-01-2025-03/cfc.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/cfc.adoc
@@ -19,23 +19,23 @@ Contact: Voosk <roisfrank@icloud.com>
 Updates in this quarter:
 
 * Added:
-  * Installing package:x11/budgie[]
-  * package:sysutils/bsdconfig[] System Configuration Tool
-  * Installing package:x11-wm/fluxbox[]
-  * Installing package:x11-wm/icewm[]
-  * Installing package:net-mgmt/prometheus2[]
-  * package:security/py-fail2ban[] (Based on IPFW, PF, IPF)
-  * Installing package:x11-wm/windowmaker[]
-  * Manual Dual-Boot Installation (Installing FreeBSD First)
-  * Installing FreeBSD - Based on Apple M1 & Parallels Desktop 20
-  * Command Line Basics
-  * Installing package:zabbix7-server[] (Based on PostgreSQL)
-  * etc.
+  ** Installing package:x11/budgie[]
+  ** package:sysutils/bsdconfig[] System Configuration Tool
+  ** Installing package:x11-wm/fluxbox[]
+  ** Installing package:x11-wm/icewm[]
+  ** Installing package:net-mgmt/prometheus2[]
+  ** package:security/py-fail2ban[] (Based on IPFW, PF, IPF)
+  ** Installing package:x11-wm/windowmaker[]
+  ** Manual Dual-Boot Installation (Installing FreeBSD First)
+  ** Installing FreeBSD - Based on Apple M1 & Parallels Desktop 20
+  ** Command Line Basics
+  ** Installing package:zabbix7-server[] (Based on PostgreSQL)
+  ** etc.
 
 * Rewritten:
-  * Installing package:ftp/pure-ftpd[] (Based on MySQL)
-  * Installing package:ftp/proftpd[] (Based on MySQL)
-  * Installing package:ftp/vsftpd[]
+  ** Installing package:ftp/pure-ftpd[] (Based on MySQL)
+  ** Installing package:ftp/proftpd[] (Based on MySQL)
+  ** Installing package:ftp/vsftpd[]
 
 * Added several GitHub Actions, such as automatic PDF generation, dead link checking, etc.
 
