--- a/website/content/en/status/_index.adoc
+++ b/website/content/en/status/_index.adoc
@@ -7,7 +7,7 @@ include::shared/en/urls.adoc[]
 
 = FreeBSD Status Reports
 
-== Next Quarterly Status Report submissions (January -- March) due: March 31st, 2025
+== Next Quarterly Status Report submissions (April -- June) due: June 30th, 2025
 
 If you are interested in submitting status reports or you are curious about how the publication process works, please see our link:{freebsd-status-report-process}[status report process description].
 
@@ -20,6 +20,10 @@ The FreeBSD Status Report attempts to address this problem by providing a vehicl
 Periodically, special status reports are prepared and published. One of those are the developer summit reports. Developer summits are places where developers meet in person to discuss issues related to the project. They are definitely worth attending if one is interested in making significant contributions to the Project and they are open to anybody!
 
 These status reports may be reproduced in whole or in part, as long as the source is clearly identified and appropriate credit given.
+
+== 2025
+
+* link:report-2025-01-2025-03/[January, 2025 - March, 2025]
 
 == 2024
 
