--- a/website/content/en/status/report-2025-01-2025-03/freebsd-foundation.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/freebsd-foundation.adoc
@@ -110,7 +110,7 @@ We received 64 applications, and we will learn which projects will be awarded sl
 
 ==== Continuous Integration and Workflow Improvement
 
-As part of our continued support of the FreeBSD Project, the Foundation supports a full-time staff member dedicated to <<_ci,improving the Project's continuous integration system and test infrastructure>>.
+As part of our continued support of the FreeBSD Project, the Foundation supports a full-time staff member dedicated to <<_continuous_integration,improving the Project's continuous integration system and test infrastructure>>.
 
 ==== Legal/FreeBSD IP
 
