status 2025q1: Foundation: Core team
Uppercase C.

--- a/website/content/en/status/report-2025-01-2025-03/freebsd-foundation.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/freebsd-foundation.adoc
@@ -115,6 +115,6 @@ As part of our continued support of the FreeBSD Project, the Foundation supports
 ==== Legal/FreeBSD IP
 
 The Foundation owns the FreeBSD trademarks, and it is our responsibility to protect them.
-We also provide legal support for the core team to investigate questions that arise.
+We also provide legal support for the Core team to investigate questions that arise.
 
 Go to link:https://freebsdfoundation.org[] to find more about how we support FreeBSD and how we can help you!
