--- a/website/content/en/releases/14.3R/hardware.adoc
+++ b/website/content/en/releases/14.3R/hardware.adoc
@@ -2578,6 +2578,78 @@ FreeBSD
 driver supports this modem.
 
 
+[[switch]]
+=== Ethernet Switches
+
+The man:adm6996fc[4] driver supports the Infineon ADM6996FC Fast Ethernet switch controller.
+
+
+
+The
+**arswitch**
+driver supports the following Ethernet switch controllers:
+
+*	Atheros AR8327 Seven-port Gigabit Ethernet Switch
+*	Atheros AR8316 Six-port Gigabit Ethernet Switch
+*	Atheros AR8236 Six-port Fast Ethernet Switch
+*	Atheros AR8226 Six-port Fast Ethernet Switch
+*	Atheros AR8216 Six-port Fast Ethernet Switch
+
+
+
+The
+**e6000sw**
+driver supports the following Gigabit Ethernet switch controllers:
+
+*	Marvell 88E6190
+*	Marvell 88E6176
+*	Marvell 88E6172
+*	Marvell 88E6341
+*	Marvell 88E6141
+
+
+
+The
+**e6060sw**
+driver supports the following Fast Ethernet switch controllers:
+
+*	Marvell 88E6060
+*	Marvell 88E6063
+*	Marvell 88E6065
+
+
+The man:felix[4] driver supports the Microsemi VSC9959 Felix Gigabit Ethernet switch controller found in the NXP Layerscape LS1028A SoC.
+
+
+The
+**ip17x**
+driver supports the following Fast Ethernet switch controllers:
+
+*	IC Plus IP178C
+*	IC Plus IP175D
+*	IC Plus IP175C
+*	IC Plus IP175A
+
+
+The man:ksz8995ma[4] driver supports the Micrel KSZ8995MA/KSZ8995FQ Fast Ethernet switch controller.
+
+
+The
+**mtkswitch**
+driver supports the following Ethernet switch controllers:
+
+*	MediaTek MT7628 (5 port Fast Ethernet)
+*	MediaTek MT7621 (5 port Gigabit Ethernet)
+*	MediaTek MT7620 (5 port Fast Ethernet)
+*	Ralink RT5350 (5 port Fast Ethernet)
+*	Ralink RT3352 (5 port Fast Ethernet)
+*	Ralink RT3050 (5 port Fast Ethernet)
+
+
+The *rtl8366* driver supports the Realtek 8366 Gigabit Ethernet switch controller.
+
+The *ukswitch* driver is designed to support potentially unknown Ethernet Switches.
+
 [[wlan]]
 === Wireless Network Interfaces
 
@@ -2727,6 +2799,13 @@ sub-driver with the following chipset generations:
 *	9000
 *	22000
 *	AX210
+
+The
+**iwlwifi**
+driver supports PCIe devices from the
+**mld**
+sub-driver with the following chipset generations:
+
 *	BZ
 *	SC
 
@@ -2842,6 +2921,7 @@ driver provides support for:
 *	Intel WiFi Link 5100
 *	Intel WiMAX/WiFi Link 5150
 *	Intel WiMAX/WiFi Link 5350
+
 
 
 
@@ -4362,10 +4442,11 @@ the Bluetooth specification v1.1, including:
 [[crypto-accel]]
 === Cryptographic Accelerators
 
-
+The man:aesni[4] driver supports the AES and SHA functions of x86 processors.
 
 The man:armv8crypto[4] driver supports the AES, SHA-1, SHA-2, and finite field Arithmetic engines in processors implementing the ARMv8 Cryptograpic Extension.
 
+The **ccp** driver supports the AMD Platform Security Processor (PSP) Cryptographic Coprocessor found in AMD Ryzen devices.
 
 
 The
@@ -4380,9 +4461,7 @@ based on the T6 ASIC:
 *	Chelsio T62100-CR
 
 
-
 The man:glxsb[4] driver supports the security block found in AMD Geode LX devices.
-
 
 
 The
@@ -4426,26 +4505,23 @@ Soekris Engineering vpn1401 and vpn1411
 > Contains a 7955 and supports symmetric and random number operations.
 
 
-
 The man:padlock[4] driver supports the AES/RNG/RSA/SHA-1, and SHA-2 engine found on Via Technologies C7, C3, and Eden devices.
 
 
+The
+**qat**
+driver supports the following Intel QuickAssist Technology Engines:
 
-The man:qat[4] driver supports the following
-Intel QuickAssist Technology Engines:
-
-*	Intel C62x Chipset
-*	Intel Atom C3000 processor product family
-*	Intel QuickAssist Adapter 8960 "Lewis Hill"
-*	Intel QuickAssist Adapter 8970 "Lewis Hill"
-*	Intel Communications Chipset 8925 to 8955 Series
-*	Intel Atom P5300 processor product family
-*	Intel QAT 4xxx Series
+*	Intel (R) C62x Chipset
+*	Intel (R) Atom C3000 processor product family
+*	Intel (R) QuickAssist Adapter 8960/Intel (R) QuickAssist Adapter 8970
+	(formerly known as "Lewis Hill")
+*	Intel (R) Communications Chipset 8925 to 8955 Series
+*	Intel (R) Atom P5300 processor product family
+*	Intel (R) QAT 4xxx Series
 
 
-
-The man:qat_c2xxx[4] driver supports the Intel QuickAssist Technology Engine found on Atom C2000 devices.
-
+The man:qat_c2xxx[4] driver supports the Intel QuickAssist Technology engine found on Atom C2000 devices.
 
 
 The
@@ -4460,7 +4536,10 @@ driver supports the following SafeXcel chips:
 
 
 
-The man:safexcel[4] driver supports the cryptographic acceleration functions of the Inside Secure EIP-97 device found on some Marvell systems-on-chip.
+The
+**safexcel**
+driver supports the cryptographic acceleration functions of the
+Inside Secure EIP-97 device found on some Marvell systems-on-chip.
 
 
 [[misc]]
