Status/2025Q1/freebsd-foundation.adoc: Fix links
Pull Request:	https://github.com/freebsd/freebsd-doc/pull/505

--- a/website/content/en/status/report-2025-01-2025-03/freebsd-foundation.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/freebsd-foundation.adoc
@@ -92,7 +92,7 @@ Updates are available for three other projects in separate report entries:
 
 * <<_improve_openjdk_on_freebsd,Improve OpenJDK on FreeBSD>>
 * <<_sylvea_unified_system_management_platform_for_freebsd,Sylve -- A Unified System Management Platform for FreeBSD>>
-* <<_vision_accessibility_accessibility_handbook,Vision Accessibility and the Accessibility Handbook>>
+* <<_vision_accessibilityaccessibility_handbook,Vision Accessibility and the Accessibility Handbook>>
 
 Overall, there were 346 `src`, 96 `ports`, and 14 `doc` tree commits identifying the FreeBSD Foundation as a sponsor.
 A sampling of that work includes:
@@ -110,7 +110,7 @@ We received 64 applications, and we will learn which projects will be awarded sl
 
 ==== Continuous Integration and Workflow Improvement
 
-As part of our continued support of the FreeBSD Project, the Foundation supports a full-time staff member dedicated to <<_ci,improving the Project's continuous integration system and test infrastructure>>.
+As part of our continued support of the FreeBSD Project, the Foundation supports a full-time staff member dedicated to <<_continuous_integration,improving the Project's continuous integration system and test infrastructure>>.
 
 ==== Legal/FreeBSD IP
 
