FAQ: Update Wi-Fi information
Reviewed by:	jrm, lwhsu
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D50456

--- a/documentation/content/en/books/faq/_index.adoc
+++ b/documentation/content/en/books/faq/_index.adoc
@@ -303,7 +303,12 @@ A list of supported graphics cards from link:https://wiki.freebsd.org/Graphics/I
 [[wifi-support]]
 === What Wi-Fi cards does FreeBSD support?
 
-Discover FreeBSD's compatibility with various Wi-Fi cards, making it easy to connect your system to wireless networks.
+This is a rapidly changing area as of 2025, so it's worth checking the Hardware Compatibility List for your chosen link:https://www.freebsd.org/releases/[release].
+
+The list of PCIe Wi-Fi devices that are known to work well on FreeBSD:
+
+* Intel chipset devices covered by man:iwlwifi[4] (high-speed as of FreeBSD 14.3)
+* Realtek RTL8188CE Mini PCIe
 
 The list of USB Wi-Fi devices that are known to work well on FreeBSD:
 
@@ -315,9 +320,6 @@ The list of USB Wi-Fi devices that are known to work well on FreeBSD:
 * D-Link DWA-171 rev A1 (RTL8821AU, man:rtwn[4])
 * ASUS USB-N10 NANO (RTL8188CUS, man:rtwn[4])
 
-The list of Mini PCIe Wi-Fi devices that are known to work well on FreeBSD:
-
-* Realtek RTL8188CE Mini PCIe
 
 [[gigabit-ethernet-network-support]]
 === Does FreeBSD support 10 Gigabit Ethernet network cards?
