--- a/website/content/en/status/report-2025-01-2025-03/foundation-infrastructure-modernization.adoc
+++ b/website/content/en/status/report-2025-01-2025-03/foundation-infrastructure-modernization.adoc
@@ -29,8 +29,8 @@ Read their link:https://reproducible-builds.org/reports/2025-02/[February report
 The high-level goal is to improve CI/CD automation to streamline software delivery and operations for new and existing software.
 Work so far is focusing on:
 
-* Improving the quality of incoming commits by providing system-agnostic tooling and documentation so that maintainers and developers can run CI without requiring a 3rd-party service (link:https://reviews.freebsd.org/D48015).
-* Making it possible to run pre-merge CI on proposed submissions (e.g. Pull Requests) (link:https://reviews.freebsd.org/D36257).
+* Improving the quality of incoming commits by providing system-agnostic tooling and documentation so that maintainers and developers can run CI without requiring a 3rd-party service (link:https://reviews.freebsd.org/D48015[]).
+* Making it possible to run pre-merge CI on proposed submissions (e.g. Pull Requests) (link:https://reviews.freebsd.org/D36257[]).
 * Documenting the CI management process to make it easier to keep tooling up to date and patched.
 * Updating the Source and Ports tests to include standard linters and other relevant automated analysis tools.
 
