Typo fix: unpriveleged -> unprivileged

--- a/documentation/content/en/books/handbook/network-servers/_index.adoc
+++ b/documentation/content/en/books/handbook/network-servers/_index.adoc
@@ -2708,12 +2708,12 @@ Set `ntpd_flags=` to contain any other ntpd flags as needed, but avoid using the
 * `-c` (set `ntpd_config=` instead)
 
 
-==== ntpd and the unpriveleged `ntpd` user
+==== ntpd and the unprivileged `ntpd` user
 
-ntpd on FreeBSD can start and run as an unpriveleged user.
+ntpd on FreeBSD can start and run as an unprivileged user.
 Doing so requires the man:mac_ntpd[4] policy module.
 The [.filename]#/etc/rc.d/ntpd# startup script first examines the NTP configuration.
-If possible, it loads the `mac_ntpd` module, then starts ntpd as unpriveleged user `ntpd` (user id 123).
+If possible, it loads the `mac_ntpd` module, then starts ntpd as unprivileged user `ntpd` (user id 123).
 To avoid problems with file and directory access, the startup script will not automatically start ntpd as `ntpd` when the configuration contains any file-related options.
 
 The presence of any of the following in `ntpd_flags` requires manual configuration as described below to run as the `ntpd` user:
