docs: Remove references to `make world`
Two of these seemed to be used in the sense of "building the system."
The other one was a literal command, but was incorrect.

Reviewed by:	jhb
Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D50471

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -3167,7 +3167,7 @@ There is no shame in asking "how in the heck do I do this?" We already know you 
 . Test your changes before committing them.
 +
 If your changes are to the kernel, make sure you can still compile both GENERIC and LINT.
-If your changes are anywhere else, make sure you can still make world.
+If your changes are anywhere else, make sure you can still compile userspace via `make buildworld`.
 If your changes are to a branch, make sure your testing occurs with a machine which is running that code.
 If you have a change which also may break another architecture, be sure and test on all supported architectures.
 Please ensure your change works for
