--- a/documentation/content/en/books/developers-handbook/policies/_index.adoc
+++ b/documentation/content/en/books/developers-handbook/policies/_index.adoc
@@ -133,7 +133,7 @@ The following policies apply to including encumbered files in the FreeBSD source
 .. The _Release Engineer_ decides whether or not it goes into the release.
 
 . User-land files:
-.. The link:https://www.FreeBSD.org/administration/#t-core[Core team] decides if the code should be part of `make world`.
+.. The link:https://www.FreeBSD.org/administration/#t-core[Core team] decides if the code should be part of the installed base system.
 .. The link:https://www.FreeBSD.org/administration/#t-re[Release Engineering] decides if it goes into the release.
 
 [[policies-shlib]]
