handbook/bsdinstall: Quiet sha256sum checks
Instead of specifying the filename to be checked, use --ignore-missing,
which only returns output for successful checks. This flag is present on
both BSD and Linux.

Reviewed by:	ziaee
Closes:		https://github.com/freebsd/freebsd-doc/pull/399

--- a/documentation/content/en/books/handbook/bsdinstall/_index.adoc
+++ b/documentation/content/en/books/handbook/bsdinstall/_index.adoc
@@ -193,7 +193,7 @@ Verifying the _checksum_ in FreeBSD can be done automatically using man:sha256su
 
 [source,shell]
 ....
-% sha256sum -c CHECKSUM.SHA256-FreeBSD-13.1-RELEASE-amd64 FreeBSD-13.1-RELEASE-amd64-dvd1.iso
+% sha256sum -c CHECKSUM.SHA256-FreeBSD-13.1-RELEASE-amd64 --ignore-missing
 FreeBSD-13.1-RELEASE-amd64-dvd1.iso: OK
 ....
 
