--- a/documentation/content/ja/books/handbook/bsdinstall/_index.adoc
+++ b/documentation/content/ja/books/handbook/bsdinstall/_index.adoc
@@ -178,7 +178,7 @@ FreeBSD での _チェックサム_ の検証は、以下のように man:sha256
 
 [source,shell]
 ....
-% sha256sum -c CHECKSUM.SHA256-FreeBSD-13.1-RELEASE-amd64 FreeBSD-13.1-RELEASE-amd64-dvd1.iso
+% sha256sum -c CHECKSUM.SHA256-FreeBSD-13.1-RELEASE-amd64 --ignore-missing
 FreeBSD-13.1-RELEASE-amd64-dvd1.iso: OK
 ....
 
