HW Relnotes: Improve gve
Allow searching "Google Cloud" or "GCE" in the Hardware Release Notes.

Reviewed by:		mhorne
Reviewed by:		Jasper Tran O'Leary <jtranoleary@google.com>
Reviewed by:		Vee Agarwal <jtranoleary@google.com>
Approved by:		mhorne (mentor)
Differential Revision:	https://reviews.freebsd.org/D50525

--- a/website/content/en/releases/13.5R/hardware.adoc
+++ b/website/content/en/releases/13.5R/hardware.adoc
@@ -2001,7 +2001,8 @@ on the Raspberry Pi 4 Model B and related systems.
 It utilizes the BCM54213PE PHY.
 
 
-Ethernet driver for Google Virtual NIC (gVNIC) (man:gve[4] driver)
+
+The man:gve[4] driver supports the Google Cloud Compute Engine (GCE) Virtual NIC (gVNIC).
 
 
 
