--- a/website/archetypes/release/hardware.adoc
+++ b/website/archetypes/release/hardware.adoc
@@ -412,7 +412,7 @@ Agere ET1310 Gigabit Ethernet adapters (man:et[4] driver)
 
 &hwlist.genet;
 
-Ethernet driver for Google Virtual NIC (gVNIC) (man:gve[4] driver)
+The man:gve[4] driver supports the Google Cloud Compute Engine (GCE) Virtual NIC (gVNIC).
 
 &hwlist.hme;
 
