Update instructions to replace boot1.efifat with boot1.efi
The boot1.efifat file was removed in 9a2b7c5. Update the instructions
with the file that actually exists in the system.

--- a/documentation/content/en/books/handbook/zfs/_index.adoc
+++ b/documentation/content/en/books/handbook/zfs/_index.adoc
@@ -1349,7 +1349,7 @@ For systems using EFI to boot, execute the following command:
 
 [source,shell]
 ....
-# gpart bootcode -p /boot/boot1.efifat -i 1 ada1
+# gpart bootcode -p /boot/boot1.efi -i 1 ada1
 ....
 
 Apply the bootcode to all bootable disks in the pool.
