committers-guide; Explain why Fixes: includes the commit title
(At least one of the reasons.)

Reviewed by:	markj, imp
Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D50600

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -2617,6 +2617,7 @@ Approved by: re (username)
 
 |`Fixes:`
 |The Git short hash and the title line of a commit that is fixed by this change as returned by `git log -n 1 --pretty=format:'%h ("%s")' GIT-COMMIT-HASH`.
+We include the commit title so that the referenced commit can be located even in the case that a future VCS migration invalidates hash references.
 
 |`MFC after:`
 |To receive an e-mail reminder to MFC at a later date, specify the number of days, weeks, or months after which an MFC is planned.
