--- a/website/content/en/releases/14.3R/signatures.adoc
+++ b/website/content/en/releases/14.3R/signatures.adoc
@@ -4,11 +4,11 @@ sidenav: download
 ---
 
 :localRel: 14.3
-:localBranchName: BETA4
+:localBranchName: RC1
 :localBranchStable: stable/14
 :localBranchReleng: releng/14.3
-:localRelSha256: ../checksums/CHECKSUM.SHA256-FreeBSD-14.3-BETA4
-:localRelSha512: ../checksums/CHECKSUM.SHA512-FreeBSD-14.3-BETA4
+:localRelSha256: ../checksums/CHECKSUM.SHA256-FreeBSD-14.3-RC1
+:localRelSha512: ../checksums/CHECKSUM.SHA512-FreeBSD-14.3-RC1
 
 = FreeBSD {localRel}-{localBranchName} Release Checksum Signatures
 
