committers-guide: List srcmgr@ as responsible for src commit bits
Reviewed by:	imp, lwhsu, emaste
Differential Revision:	https://reviews.freebsd.org/D50619

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -243,7 +243,7 @@ Additional areas of authority may be added at a later date: when this occurs, th
 |__Tree Components__
 
 |src
-|core@
+|srcmgr@
 |src/
 
 |doc
@@ -267,7 +267,7 @@ Committers are encouraged to seek review for their work as part of the normal de
 * doc committers may commit documentation changes to [.filename]#src# files, such as manual pages, READMEs, fortune databases, calendar files, and comment fixes without approval from a src committer, subject to the normal care and tending of commits.
 * Any committer may make changes to any other tree with an "Approved by" from a non-mentored committer with the appropriate bit.
 Mentored committers can provide a "Reviewed by" but not an "Approved by".
-* Committers can acquire an additional bit by the usual process of finding a mentor who will propose them to core, doceng, or portmgr, as appropriate. When approved, they will be added to 'access' and the normal mentoring period will ensue, which will involve a continuing of "Approved by" for some period.
+* Committers can acquire an additional bit by the usual process of finding a mentor who will propose them to srcmgr, doceng, or portmgr, as appropriate. When approved, they will be added to 'access' and the normal mentoring period will ensue, which will involve a continuing of "Approved by" for some period.
 
 [[doc-blanket-approval]]
 ==== Documentation Implicit (Blanket) Approval
