committers-guide: Drop notion of reference architectures
i386 can no longer be a reference architecture in 15.0 and later.
Instead, require new portable features to work on at least one Tier 1
architecture and drop the notion of a separate set of reference
architectures.

While here, FreeBSD has not been i386-only for so long that the
leading sentence now is outdated, so drop it.

Reviewed by:	imp, lwhsu
Differential Revision:	https://reviews.freebsd.org/D50620

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -3192,12 +3192,10 @@ If you are unsure of the current maintainership email {freebsd-arch} and ask.
 
 === Policy on Multiple Architectures
 
-FreeBSD has added several new architecture ports during recent release cycles and is truly no longer an i386(TM) centric operating system.
 In an effort to make it easier to keep FreeBSD portable across the platforms we support, core has developed this mandate:
 
 [.blockquote]
-Our 32-bit reference platform is i386, and our 64-bit reference platform is amd64.
-Major design work (including major API and ABI changes) must prove itself on at least one 32-bit and at least one 64-bit platform, preferably the primary reference platforms, before it may be committed to the source tree.
+Major design work (including major API and ABI changes) must prove itself on at least one Tier 1 platform before it may be committed to the source tree.
 
 Developers should also be aware of our Tier Policy for the long term support of hardware architectures.
 The rules here are intended to provide guidance during the development process, and are distinct from the requirements for features and architectures listed in that section.
