new committer (ports): Jesús Daniel Colmenares Oviedo (dtxdf)
per the committer's guide for new committers:

- Add my PGP key
- Add myself to shared/authors.adoc
- Add myself to shared/contrib-committers.adoc
- Add a news entry

Approved by:	acm (mentor)

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -1140,6 +1140,9 @@ include::{include-path}michaelo.key[]
 === `{igoro}`
 include::{include-path}igoro.key[]
 
+=== `{dtxdf}`
+include::{include-path}dtxdf.key[]
+
 === `{ler}`
 include::{include-path}ler.key[]
 
