--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -963,6 +963,10 @@
 :dteske-email: dteske@FreeBSD.org
 :dteske: {dteske-name} <{dteske-email}>
 
+:dtxdf-name: Jesús Daniel Colmenares Oviedo
+:dtxdf-email: dtxdf@FreeBSD.org
+:dtxdf: {dtxdf-name} <{dtxdf-email}>
+
 :dufault-name: Peter Dufault
 :dufault-email: dufault@FreeBSD.org
 :dufault: {dufault-name} <{dufault-email}>
