__FreeBSD_version bumped to for drm-kmod -> LinuxKPI changes
Sponsored by:	The FreeBSD Foundation

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -236,6 +236,11 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |May 4, 2025
 |15.0-CURRENT after the internal API between the nfscommon and nfscl modules changed.
 
+|1500045
+|gitref:a02180cf60a6a0102669b678e9c81ad9f1aa4d91[repository="src",length=12]
+|June 3, 2025
+|15.0-CURRENT after pulling in dma-mapping.h changes from drm-kmod to LinuxKPI.
+
 |===
 
 [[versions-14]]
