--- a/website/content/en/releases/14.3R/hardware.adoc
+++ b/website/content/en/releases/14.3R/hardware.adoc
@@ -2501,7 +2501,17 @@ sysctl(8).
 
 
 
-&hwlist.ure;
+
+The
+**ure**
+driver supports the following USB Ethernet controllers:
+
+	Model:                                          Speed (Mbps):  
+	Realtek RTL8156/RTL8156B/RTL8156BG              10, 100, 1000, and 2500  
+	Realtek RTL8153/RTL8153B                        10, 100, and 1000  
+	Realtek RTL8152                                 10 and 100  
+	Realtek RTL8168/8169/8110/8211 via rgephy(4)    10, 100, and 1000
+
 
 
 
@@ -3524,7 +3534,313 @@ driver supports the following classes of SCCs:
 
 
 
-&hwlist.puc;
+
+The
+**puc**
+driver supports the following
+PCI multi-port serial and parallel adapters:
+
+*	Sunix SUN1889
+*	HP Diva Serial \[GSP] Multiport UART:
+
+	-	Tosca Console
+	-	Tosca Secondary
+	-	Maestro SP2
+	-	Superdome Console
+	-	Keystone SP2
+	-	Everest SP2
+
+*	VScom:
+
+	-	PCI-800
+	-	PCI-400
+	-	PCI-200
+
+*	Boca Research Turbo Serial:
+
+	-	658
+	-	654
+
+*	Dolphin Peripherals:
+
+	-	4035
+	-	4014
+
+*	Applied Micro Circuits 8 Port UART
+*	Digi Neo:
+
+	-	PCI 4 Port
+	-	PCI 8 Port
+	-	PCIe 8 Port
+	-	PCIe 4 Port
+	-	PCIe 4 Port RJ45
+	-	PCIe 8 Port RJ45
+
+*	Comtrol RocketPort:
+
+	-	550/8 RJ11 part A
+	-	550/8 RJ11 part B
+	-	550/8 Octa part A
+	-	550/8 Octa part B
+	-	550/4 RJ45
+	-	550/Quad
+	-	550/16 part A
+	-	550/16 part B
+	-	550/8 part A
+	-	550/8 part B
+
+*	IBM SurePOS 300 Series (481033H) serial ports
+*	SIIG Cyber I/O PCI (10x family and 20x family):
+
+	-	16C550
+	-	16C650
+	-	16C850
+
+*	SIIG Cyber Parallel Dual PCI (10x family and 20x family):
+*	SIIG Cyber Serial Dual PCI (10x family and 20x family):
+
+	-	16C550
+	-	16C650
+	-	16C850
+
+*	SIIG Cyber 2S1P PCI (10x family and 20x family):
+
+	-	16C550
+	-	16C650
+	-	16C850
+
+*	SIIG Cyber 4S PCI (10x family and 20x family):
+
+	-	16C550
+	-	16C650
+	-	16C850
+
+*	SIIG PS8000 8S PCI 16C650 (20x family)
+*	Brainboxes:
+
+	-	PX-101
+	-	PX-246
+	-	PX-257
+	-	PX-260
+	-	PX-279
+	-	PX-310
+	-	PX-313
+	-	PX-320
+	-	PX-346
+	-	PX-368
+	-	PX-420
+	-	PX-431
+	-	PX-475
+	-	PX-803
+	-	PX-820
+	-	PX-831
+	-	PX-846
+	-	PX-857
+	-	UC-101
+	-	UC-203
+	-	UC-253
+	-	UC-257
+	-	UC-260
+	-	UC-268
+	-	UC-279
+	-	UC-302
+	-	UC-310
+	-	UC-313
+	-	UC-346
+	-	UC-357
+	-	UC-368
+	-	UC-414
+	-	UC-420
+	-	UC-431
+	-	UC-475
+	-	UC-607
+	-	UC-836
+	-	UP-189
+	-	UP-200
+	-	UP-869
+	-	UP-880
+
+*	Intashield:
+
+	-	IS-200
+	-	IS-400
+	-	IX-100
+	-	IX-200
+	-	IX-400
+
+*	Quatech:
+
+	-	QSC-100
+	-	DSC-100
+	-	DSC-200/300
+	-	QSC-200/300
+	-	ESC-100D
+	-	ESC-100M
+	-	QSCLP-100
+	-	DSCLP-100
+	-	DSCLP-200/300
+	-	ESCLP-100
+
+*	Moxa Technologies:
+
+	-	Smartio CP-102E/PCIe
+	-	Smartio CP-102EL/PCIe
+	-	Smartio C104H/PCI
+	-	Smartio CP-104UL/PCI
+	-	Smartio CP-104JU/PCI
+	-	Smartio CP-104EL/PCIe
+	-	Smartio CP-104EL-A/PCIe
+	-	CP-112UL
+	-	Industio CP-114
+	-	Smartio CP-114EL/PCIe
+	-	Smartio CP-118EL-A/PCIe
+	-	C168H/PCI
+	-	C168U/PCI
+	-	CP-168EL/PCIe
+	-	Smartio CP-168EL-A/PCIe
+
+*	Exar:
+
+	-	XR17C/D152
+	-	XR17C154
+	-	XR17C158
+	-	XR17V258IV
+	-	XR17V352
+	-	XR17V354
+	-	XR17V358
+
+*	Advantech
+
+	-	PCI-1602 Rev A
+	-	2-port PCI (PCI-1602 Rev B1/PCI-1603)
+
+*	Lava Computers:
+
+	-	Dual Serial
+	-	Quatro A
+	-	Quatro B
+	-	Quattro-PCI A
+	-	Quattro-PCI B
+	-	Octo A
+	-	Octo B
+
+*	Sunix SUN1888
+*	I-O DATA RSA-PCI2/R
+*	SIIG Cyber 4 PCI 16550
+*	SIIG Cyber 4S PCI 16C650 (20x family)
+*	SIIG Quartet Serial 850
+*	Kuroutoshikou SERIAL4P-LPPCI2
+*	Oxford Semiconductor OX16PCI954 UARTs
+*	SIIG Cyber:
+
+	-	2S PCIe
+	-	Serial Dual PCI 16C850
+	-	2SP1 PCIe
+
+*	Oxford Semiconductor:
+
+	-	OX16PCI954 UARTs
+	-	OX9160/OX16PCI954 UARTs (function 1)
+	-	OX16PCI952 UARTs
+	-	OX16PCI958 UARTs
+
+*	Perle:
+
+	-	Ultraport4 Express
+	-	Speed2 LE
+	-	Speed4 LE
+	-	Speed8 LE
+
+*	Oxford Semiconductor OXPCIe952:
+
+	-	1S1P
+	-	UARTs
+	-	UARTs (function 1)
+
+*	Oxford Semiconductor OXPCIe954:
+
+	-	UARTs
+	-	UARTs (function 1)
+
+*	Oxford Semiconductor OXPCIe958:
+
+	-	UARTs
+	-	UARTs (function 1)
+
+*	VScom:
+
+	-	PCI-100L
+	-	PCI-200L
+	-	200Li
+
+*	Titan:
+
+	-	PCI-800H
+	-	PCI-800H
+	-	PCI-200H
+
+*	Titan VScom:
+
+	-	PCI-800L
+	-	PCI-200HV2
+	-	PCIex-800H
+	-	PCIex-800H
+
+*	Avlab Technology PCI IO 2S
+*	Avlab Low Profile PCI 4 Serial
+*	Syba Tech Ltd PCI-4S2P-550-ECP
+*	Sunix SER5xxxx
+
+	-	2-port serial
+	-	4-port serial
+	-	8-port serial
+
+*	Sunix MIO5xxxx (1284 Printer port):
+
+	-	1-port serial
+	-	2-port serial
+	-	4-port serial
+
+*	Feasso PCI FPP-02 2S1P
+*	Sun 1040 PCI Quad Serial
+*	Decision Computer Inc PCCOM:
+
+	-	4-port serial
+	-	8-port serial
+
+*	PCCOM dual port RS232/422/485
+*	NetMos NM9815 Dual 1284 Printer port
+*	NetMos NM9835:
+
+	-	based 1-port serial
+	-	based 2-port serial
+	-	Dual UART and 1284 Printer port
+
+*	NetMos NM9845:
+
+	-	6 Port UART
+	-	Quad UART and 1284 Printer port
+
+*	NetMos NM9865:
+
+	-	Dual UART
+	-	Triple UART
+	-	Quad UART
+	-	Single UART and 1284 Printer port
+	-	Dual UART and 1284 Printer port
+	-	Dual 1284 Printer port
+
+*	IC Book Labs:
+
+	-	Gunboat x4 Lite
+	-	Gunboat x4 Pro
+	-	Ironclad x8 Lite
+	-	Ironclad x8 Pro
+	-	Dreadnought x16 Pro
+	-	Dreadnought x16 Lite
+	-	Gunboat x2 Low Profile
+	-	Gunboat x4 Low Profile
+
 
 
 
