--- a/website/content/en/releases/14.3R/schedule.adoc
+++ b/website/content/en/releases/14.3R/schedule.adoc
@@ -41,7 +41,7 @@ General discussions about the pending release and known issues should be sent to
 |BETA3 builds begin |16 May 2025 |16 May 2025 |Third beta test snapshot.
 |BETA4 builds begin |23 May 2025 |23 May 2025 |Fourth beta test snapshot.
 |RC1 builds begin |30 May 2025 |30 May 2025 |First release candidate.
-|RELEASE builds begin |6 June 2025 |- |{localRel}-RELEASE builds begin.
+|RELEASE builds begin |6 June 2025 |6 June 2025 |{localRel}-RELEASE builds begin.
 |RELEASE announcement |10 June 2025 |- |{localRel}-RELEASE press release.
 |{localRelPrev} EoL |30 September 2025 |- |{localRelPrev}-RELEASE no longer supported.
 |{localRel} EoL |30 June 2026 |- |{localRel}-RELEASE no longer supported.
