--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -37,7 +37,7 @@
 
 // Set to 'INCLUDE' when the schedule is available.
 
-:beta-upcoming: INCLUDE
+:beta-upcoming: IGNORE
 
 // Set to 'INCLUDE' when the installation images are available.
 
@@ -85,15 +85,15 @@
 
 :rel143-current-major: 14
 :rel143-current: 14.3
-//:rel143-current-date: June 3, 2025
+:rel143-current-date: June 10, 2025
 
-//:u-rel143-notes: https://www.FreeBSD.org/releases/{rel143-current}R/relnotes/
-//:u-rel143-announce: https://www.FreeBSD.org/releases/{rel143-current}R/announce/
-//:u-rel143-errata: https://www.FreeBSD.org/releases/{rel143-current}R/errata/
-//:u-rel143-hardware: https://www.FreeBSD.org/releases/{rel143-current}R/hardware/
-//:u-rel143-installation: https://www.FreeBSD.org/releases/{rel143-current}R/installation/
-//:u-rel143-readme: https://www.FreeBSD.org/releases/{rel143-current}R/readme/
-//:u-rel143-signatures: https://www.FreeBSD.org/releases/{rel143-current}R/signatures/
+:u-rel143-notes: https://www.FreeBSD.org/releases/{rel143-current}R/relnotes/
+:u-rel143-announce: https://www.FreeBSD.org/releases/{rel143-current}R/announce/
+:u-rel143-errata: https://www.FreeBSD.org/releases/{rel143-current}R/errata/
+:u-rel143-hardware: https://www.FreeBSD.org/releases/{rel143-current}R/hardware/
+:u-rel143-installation: https://www.FreeBSD.org/releases/{rel143-current}R/installation/
+:u-rel143-readme: https://www.FreeBSD.org/releases/{rel143-current}R/readme/
+:u-rel143-signatures: https://www.FreeBSD.org/releases/{rel143-current}R/signatures/
 
 :rel142-current-major: 14
 :rel142-current: 14.2
