--- a/website/content/en/portmgr/policies_eol.adoc
+++ b/website/content/en/portmgr/policies_eol.adoc
@@ -110,6 +110,17 @@ The _Estimated EoL (end-of-life)_ column gives the earliest date on which that b
 * FreeBSD:14:powerpc64le (only quarterly is updated)
 
 |September 30, 2025
+|releng/14.3 |14.3-RELEASE |releng/14.3 a|
+* FreeBSD:14:aarch64
+* FreeBSD:14:amd64
+* FreeBSD:14:armv6
+* FreeBSD:14:armv7
+* FreeBSD:14:i386
+* FreeBSD:14:powerpc (only quarterly is updated)
+* FreeBSD:14:powerpc64 (only quarterly is updated)
+* FreeBSD:14:powerpc64le (only quarterly is updated)
+
+|June 30, 2026
 |main |n/a |main a|
 * FreeBSD:15:aarch64
 * FreeBSD:15:amd64
