--- a/website/content/en/where.adoc
+++ b/website/content/en/where.adoc
@@ -39,6 +39,65 @@ For embedded platforms: SD card images are available.
 
 `RELEASE` versions of FreeBSD are the end result of _release engineering_ and are recommended for most users.
 
+[[download-rel143]]
+=== FreeBSD {rel143-current}-RELEASE
+
+[.tblbasic]
+[.tblDownload]
+[width="100%",cols="25%,25%,25%,25%",options="header",]
+|===
+|Installer |VM |SD Card |Documentation
+a|
+* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel143-current}/[amd64]
+* link:{url-rel}/i386/i386/ISO-IMAGES/{rel143-current}/[i386]
+* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[aarch64]
+* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel143-current}/[armv7]
+* link:{url-rel}/powerpc/powerpc/ISO-IMAGES/{rel143-current}/[powerpc]
+* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel143-current}/[powerpc64]
+* link:{url-rel}/powerpc/powerpc64le/ISO-IMAGES/{rel143-current}/[powerpc64le]
+* link:{url-rel}/powerpc/powerpcspe/ISO-IMAGES/{rel143-current}/[powerpcspe]
+* link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel143-current}/[riscv64]
+
+a|
+* link:{url-rel}/VM-IMAGES/README.txt[README]
+* link:{url-rel}/VM-IMAGES/{rel143-current}-RELEASE/amd64/Latest/[amd64]
+* link:{url-rel}/VM-IMAGES/{rel143-current}-RELEASE/i386/Latest/[i386]
+* link:{url-rel}/VM-IMAGES/{rel143-current}-RELEASE/aarch64/Latest/[aarch64]
+* link:{url-rel}/VM-IMAGES/{rel143-current}-RELEASE/riscv64/Latest/[riscv64]
+* link:{url-rel}/CI-IMAGES/{rel143-current}-RELEASE/amd64/Latest/[amd64] (BASIC-CI)
+* link:{url-rel}/CI-IMAGES/{rel143-current}-RELEASE/aarch64/Latest/[aarch64] (BASIC-CI)
+
+a|
+* aarch64
+* {blank}
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[PINE64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[PINE64-LTS]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[ROCK64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[ROCKPRO64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[RPI] (3/4)
+* armv7
+* {blank}
+** link:{url-rel}/arm/armv7/ISO-IMAGES/{rel143-current}/[GENERICSD]
+* riscv64
+* {blank}
+** link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel143-current}/[GENERICSD]
+
+a|
+* {blank}
+* link:../releases/#current[Released]: {rel143-current-date}
+* link:{u-rel143-notes}[Release Notes]
+* link:{u-rel143-readme}[Readme]
+* link:{u-rel143-hardware}[Hardware Compatibility List]
+* link:{u-rel143-installation}[Installation Instructions]
+* link:{u-rel143-errata}[Errata]
+* link:{u-rel143-signatures}[Signed Checksums]
+
+|===
+
+== Production Quality (legacy)
+
+Some FreeBSD `RELEASEs` are supported but are older or built from older `STABLE` branches; these are considered "legacy" and are probably only of interest to people maintaining existing systems on FreeBSD.
+
 [[download-rel142]]
 === FreeBSD {rel142-current}-RELEASE
 
@@ -93,10 +152,6 @@ a|
 * link:{u-rel142-signatures}[Signed Checksums]
 
 |===
-
-== Production Quality (legacy)
-
-Some FreeBSD `RELEASEs` are supported but are older or built from older `STABLE` branches; these are considered "legacy" and are probably only of interest to people maintaining existing systems on FreeBSD.
 
 [[download-rel135]]
 === FreeBSD {rel135-current}-RELEASE
